# tac-webbuilder

./: .adw-context.json  .claudeignore  .env.postgres.example  .env.sample  .gitignore  .mcp.json  .ports.env.sample  ADD_CLOUDFLARE_ROUTE.md  ALL_MIGRATIONS_COMPLETE.md  AUDIT_SUMMARY_EXEC_BRIEF.md  CLAUDE.md  CLEANUP_PHASE1_TEST_FIXES.md  CODE_STANDARDS_AUDIT_REPORT.json  CODE_STANDARDS_AUDIT_SUMMARY.md  COMPLETED.md  COMPREHENSIVE_AUDIT_REPORT.json  CONTINUE_GITHUB_E2E_TESTS.md  CREATED_REGRESSION_TESTS_SUMMARY.md  DATABASE_CONSTRAINT_CATALOG.md  DB_SNAPSHOT_GUIDE.md  DELIVERABLES.md  DOCUMENTATION_AUDIT_REPORT.json  E2E_FIXTURE_FIXES_FINAL_REPORT.md  E2E_TEST_FIXES_SESSION_3_SUMMARY.md  E2E_TEST_FIXES_SUMMARY.md  FEATURE_104_SESSION_1_BASIC_GENERATOR.md  FEATURE_106_REQUIREMENTS.md  FEATURE_69_PHASE_PLAN.md  FINAL_SUMMARY.txt  FIX_PANEL8_ERRORS.md  IMPLEMENTATION_GUIDE.md  ISSUE_279_COMPLETE_FIX_SUMMARY.md  ISSUE_279_COMPREHENSIVE_ANALYSIS.md  ISSUE_279_SUMMARY.md  ISSUE_279_TEST_PHASE_VALIDATION_BUG.md  LINT_CLEANUP_COMPLETE.md  MIGRATION_004_COMPLETION.md  MIGRATION_010_VERIFICATION.md  NEW_SESSION_PRIMER.md  NEXT_SESSION_START_HERE.md  (+47 more)
adws/: ADW_VALIDATION_FIXES.md  README.md  TOKEN_TOOLS.md  adw_build_external.py  adw_build_iso.py  adw_build_workflow.py  adw_cleanup_iso.py  adw_document_iso.py  adw_lightweight_iso.py  adw_lint_external.py  adw_lint_iso.py  adw_lint_workflow.py  adw_patch_iso.py  adw_plan_build_document_iso.py  adw_plan_build_iso.py  adw_plan_build_review_iso.py  adw_plan_build_test_iso.py  adw_plan_build_test_review_iso.py  adw_plan_iso.py  adw_plan_iso_optimized.py  adw_quality_audit_2025-12-23.json  adw_review_iso.py  adw_sdlc_complete_iso.py  adw_sdlc_complete_zte_iso.py  adw_sdlc_from_build_iso.py  adw_sdlc_iso.py  adw_sdlc_zte_iso.py  adw_ship_iso.py  adw_state_schema.json  adw_stepwise_iso.py  adw_test_external.py  adw_test_gen_workflow.py  adw_test_iso.py  adw_test_workflow.py  adw_validate_iso.py  adw_verify_iso.py  analyze_context_usage.py  monitor_adw_tokens.py  pyproject.toml  test_phase1_refactoring.py
adws/adw_modules/: agent.py  app_lifecycle.py  build_checker.py  cleanup_operations.py  commit_generator.py  complexity_analyzer.py  data_types.py  doc_cleanup.py  failure_cleanup.py  gh_api_monitor.py  git_ops.py  github.py  integration_checklist.py  integration_validator.py  lint_checker.py  migration_helper.py  observability.py  phase_tracker.py  plan_executor.py  port_pool.py  preflight_checks.py  rate_limit.py  state.py  structured_logger.py  success_operations.py  test_generator.py  test_runner.py  tool_call_tracker.py  tool_registry.py  utils.py  workflow_ops.py  worktree_ops.py  worktree_setup.py
adws/adw_tests/: health_check.py  test_build_checker.py  test_state_completeness.py  test_webhook_integration.py
adws/adw_triggers/: trigger_webhook.py  webhook_validator.py
adws/examples/: build_with_tracking_example.py
adws/scripts/: validate_working_dir.py
adws/tests/: .coveragerc  BUILD_STATE_PERSISTENCE_EXAMPLES.md  BUILD_STATE_PERSISTENCE_INDEX.md  BUILD_STATE_PERSISTENCE_QUICK_START.md  BUILD_STATE_PERSISTENCE_SUMMARY.md  BUILD_STATE_PERSISTENCE_TESTS_README.md  BUILD_STATE_PERSISTENCE_VERIFICATION.md  INDEX.md  INTEGRATION_TESTS_QUICK_START.md  INTEGRATION_TESTS_README.md  QUICK_COMMANDS.sh  QUICK_START.md  QUICK_START_TESTING.md  README.md  TEST_EXECUTION_GUIDE.md  TEST_GENERATOR_IMPLEMENTATION_SUMMARY.md  TEST_GENERATOR_TESTS_README.md  TEST_SUMMARY.md  VERIFICATION_CHECKLIST.md  WORKFLOW_FAILURE_TESTS_README.md  __init__.py  conftest.py  pytest.ini  run_integration_tests.sh  test_build_state_persistence.py  test_data_types.py  test_external_results_persistence.py  test_external_workflows_integration.py  test_infrastructure_failure_handling.py  test_integration_checklist.py  test_integration_validator.py  test_observability_logging.py  test_phase_continuation.py  test_port_pool.py  test_state_validator_path_fix.py  test_test_generator.py  test_test_phase_error_handling.py  test_test_runner.py  test_tool_call_tracker.py  test_tool_call_tracker_integration.py  (+2 more)
adws/utils/: __init__.py  idempotency.py  state_validator.py
app/server/: .coverage  <MagicMock name='DB_PATH' id='4436167712'>  CHANGES_APPLIED.md  CHANGES_CHECKLIST.md  COMMIT_MESSAGE.txt  EXACT_CHANGES_REFERENCE.md  FINAL_TEST_REPORT.md  FIXES_SUMMARY.md  FIX_COMPLETION_REPORT.md  INTEGRATION_TEST_FIXES.md  PARENT_ISSUE_CLEANUP_ASSESSMENT.md  PHASE_QUEUE_TEST_FIXES.md  QUICK_FIX_REFERENCE.md  README_TEST_FIXES.md  REMAINING_ERRORS_DIAGNOSTIC.md  SESSION_21_SUMMARY.md  TESTING.md  TEST_ERROR_FIXES.md  TEST_FIXES_REPORT.md  TEST_FIXES_SESSION_21.md  TEST_FIXES_SUMMARY.md  TYPEFIX_COMPLETION_REPORT.md  VALIDATION_CHECKLIST.md  VERIFICATION_CHECKLIST.md  VERIFICATION_CHECKLIST_SESSION_21.md  apply_migration_010.py  benchmark_db_performance.py  pyproject.toml  pytest.ini  ruff.toml  run_e2e_tests.sh  run_fixed_tests.sh  run_phase_queue_tests.sh  server.py  test_db_operations.py  test_github_webhook.py  test_imports.py  test_pattern_predictions.py  test_postgres_connection.py  validate_fixes.py  (+1 more)
app/server/core/: __init__.py  adw_lock.py  adw_monitor.py  api_quota.py  config.py  constants.py  context_review_agent.py  cost_estimate_storage.py  cost_tracker.py  data_models.py  export_utils.py  file_processor.py  github_poster.py  health_checks.py  input_analyzer.py  insights.py  issue_formatter.py  llm_processor.py  nl_processor.py  pattern_detector.py  pattern_exclusions.py  pattern_logging.py  pattern_matcher.py  pattern_persistence.py  pattern_predictor.py  pattern_signatures.py  pattern_validator.py  phase_continuation.py  preflight_checks.py  project_detector.py  routes_analyzer.py  sql_processor.py  sql_security.py  template_router.py  workflow_analytics.py  workflow_analytics_old.py  workflow_dry_run.py  workflow_history.py  workflow_pattern_cache.py
app/server/database/: __init__.py  connection.py  factory.py  postgres_adapter.py  sqlite_adapter.py
app/server/db/: schema.sql
app/server/migrations/: 001_add_context_review.sql  __init__.py  (+6 more)
(+1193 files in other folders)
