[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "server"
version = "0.1.0"
description = "Natural Language SQL Interface Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.13",
    "uvicorn==0.34.3",
    "python-multipart==0.0.20",
    "openai==1.88.0",
    "anthropic==0.54.0",
    "pandas==2.3.0",
    "python-dotenv==1.0.1",
    "websockets==15.0.1",
    "wsproto==1.3.1",
    "rich>=13.0.0",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
]

test = [
    # Core testing
    "pytest==8.4.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    # HTTP testing
    "httpx>=0.28.0",
    # Database testing
    "pytest-mock>=3.14.0",
    # WebSocket testing support
    "websockets>=15.0.1",
    # Coverage reporting
    "coverage>=7.6.0",
    # Async context managers for test fixtures
    "pytest-xdist>=3.6.0",
    # Better assertion introspection
    "pytest-clarity>=1.0.0",
]

integration = [
    # All test dependencies
    "pytest==8.4.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "pytest-mock>=3.14.0",
    "websockets>=15.0.1",
    "coverage>=7.6.0",
    "pytest-xdist>=3.6.0",
    "pytest-clarity>=1.0.0",
    # E2E and integration specific
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.1",
]

[tool.setuptools]
packages = ["app", "core", "services", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "websocket: marks tests that use WebSocket",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.3",
]

test = [
    "pytest==8.4.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "pytest-mock>=3.14.0",
    "websockets>=15.0.1",
    "coverage>=7.6.0",
    "pytest-xdist>=3.6.0",
    "pytest-clarity>=1.0.0",
]

integration = [
    "pytest==8.4.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "pytest-mock>=3.14.0",
    "websockets>=15.0.1",
    "coverage>=7.6.0",
    "pytest-xdist>=3.6.0",
    "pytest-clarity>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.1",
]
